Kubernetes/Gatekeeper_kuard-pod-securitycontext.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: kuard 
spec: 
  securityContext: 
    runAsNonRoot: true 
    runAsUser: 1000 
    runAsGroup: 3000 
    fsGroup: 2000 
  containers: 
    - image: gcr.io/kuar-demo/kuard-amd64:blue 
      name: kuard 
      securityContext: 
          allowPrivilegeEscalation: false 
          readOnlyRootFilesystem: true 
          privileged: false 
      ports: 
        - containerPort: 8080 
          name: http 
          protocol: TCP
