Kubernetes/Gatekeeper_noncompliant-pod.yml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx-noncompliant 
spec: 
  containers: 
    - name: nginx 
      image: nginx
