Kubernetes/SecurityContext_Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: securitycontext-demo
  namespace: protected
spec:
  containers:
  - name: securitycontext-demo
    image: alpine
