Kubernetes/SecurityContext_Pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: securitycontext-demo
  namespace: protected
spec:
  containers:
  - image: alpine
    name: securitycontext-demo
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
  restartPolicy: Never
